# opencvtest

./: CMakeLists.txt  main.cpp  main.qml
opencv/: cvconvert.h  objectdetector.cpp  objectdetector.h  videoprocessor.cpp  videoprocessor.h
opencvimage/: framesource.h  imageprovider.h
